# get-papers

./: Readme.md  pyproject.toml  result.csv  result2.csv  result3.csv  results.csv
papers/: main.py
